--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.436.0",
+    "mongoose": "^8.5.4",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
